samples/_failures_safe/1761328563_a878b3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_df9fb1b4.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_df9fb1b4.c:170:5: error: expected declaration or statement at end of input
  170 |     switch (type) {
      |     ^~~~~~
./samples/SAFE/__tmp_df9fb1b4.c:170:5: error: expected declaration or statement at end of input
